--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,11 @@
 	<packaging>war</packaging>
 	<name>Java SWSEC Demo App</name>
 
-	<properties>
-		<jettyVersion>7.2.0.v20101020</jettyVersion>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>${jettyVersion}</version>
+			<version>7.2.0.v20101020</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -38,7 +34,6 @@
 	<build>
 		<plugins>
 			<plugin>
-				<!-- This plugin is needed for the servlet example -->
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jettyVersion}</version>
