--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,15 @@
 	<packaging>war</packaging>
 	<name>Java SWSEC Demo App</name>
 
+	<properties>
+		<jettyVersion>7.2.0.v20101020</jettyVersion>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>7.2.0.v20101020</version>
+			<version>${jettyVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial</groupId>
