--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>clcert</groupId>
 	<artifactId>swsec-demo</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.9-BETA</version>
 	<packaging>war</packaging>
 	<name>Java SWSEC Demo App</name>
 
