Ubicación de la db sqlite es relativa ahora

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
 # General properties
 
-JDBC.connectionURL = jdbc:sqlite:/home/cristian/swsecIntroDemo/app/db/clcert.sqlite
+JDBC.connectionURL = jdbc:sqlite:db/clcert.sqlite
