--- a/pom.xml
+++ b/pom.xml
@@ -47,11 +47,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>net.sourceforge.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
-            <version>2.9</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>net.sourceforge.jwebunit</groupId>
+			<artifactId>jwebunit-htmlunit-plugin</artifactId>
+			<version>2.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
