--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
 	<packaging>war</packaging>
 	<name>Java SWSEC Intro App</name>
 
+	<properties>
+		<jettyVersion>7.2.0.v20101020</jettyVersion>
+	</properties>
+
 	<repositories>
 		<repository>
 			<id>tmate</id>
@@ -19,7 +23,7 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>7.2.0.v20101020</version>
+			<version>${jettyVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -120,7 +124,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.1</version>
+				<version>1.2.1</version>
 				<executions>
 					<execution>
 						<goals>
