--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,37 @@ dependencies {
     testCompile 'net.sourceforge.jwebunit:jwebunit-htmlunit-plugin:2.5'
 }
 
-sourceSets {
-    main {
-        java {
-            srcDir 'src/main/java/injcristianrojas/dbsetup'
-        }
+[jettyRun,jettyRunWar,jettyStop]*.stopPort = 8081
+[jettyRun,jettyRunWar,jettyStop]*.stopKey = 'stopKey'
+
+jettyRun {
+	contextPath ''
+}
+
+test {
+    exclude '**/*ITest.*'
+}
+
+task integrationTest(type: Test, depends:test) {
+    description = 'Tests the web application and database.'
+    include '**/*ITest.*'
+    doFirst {
+    	createDB.execute()
+        jettyRun.daemon = true
+        jettyRun.execute()
+    }
+    doLast {
+        jettyStop.execute()
     }
 }
 
-task(createDB, dependsOn: 'classes', type: JavaExec) {
+task deleteDB(type: Delete) {
+    description = 'Deletes the database.'
+    delete 'swsecdemo.sqlite'
+}
+
+task(createDB, dependsOn: [deleteDB, classes], type: JavaExec) {
+    description = 'Creates the database needed for the web application.'
     main = 'injcristianrojas.dbsetup.DBSetup'
     classpath = sourceSets.main.runtimeClasspath
 }
-
-
-
-defaultTasks 'createDB'
