--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'jetty'
+apply plugin: 'findbugs'
 
 repositories {
     mavenCentral()
@@ -49,4 +50,15 @@ task(createDB, dependsOn: [deleteDB, classes], type: JavaExec) {
     description = 'Creates the database needed for the web application.'
     main = 'injcristianrojas.dbsetup.DBSetup'
     classpath = sourceSets.main.runtimeClasspath
+}
+
+tasks.withType(FindBugs) {
+    reports {
+        xml.enabled = false
+        html.enabled = true
+    }
+}
+
+findbugs {
+    effort = "max"
 }
