--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>injcristianrojas.DBSetup</mainClass>
+					<mainClass>swsec.DBSetup</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
