Añadido repo secundario Maven

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'findbugs'
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://uk.maven.org/maven2"
+    }
 }
 
 dependencies {
