Usando repo cache local y después Maven Central

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ apply plugin: 'findbugs'
 
 repositories {
     mavenCentral()
-    maven {
-        url "http://uk.maven.org/maven2"
-    }
+    mavenLocal()
 }
 
 dependencies {
