Autoscanning (hasta por ahí no más) de cambios en proyecto

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 
 jettyRun {
     contextPath ''
+    scanIntervalSeconds = 2
     doFirst {
         assert file('swsecdemo.sqlite').exists() 
     }
