--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>swsec..dbsetup.DBSetup</mainClass>
+					<mainClass>swsec.dbsetup.DBSetup</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -149,7 +149,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
-				<version>2.5.2</version>
+				<version>2.5.3-SNAPSHOT</version>
 				<configuration>
 					<findbugsXmlOutput>true</findbugsXmlOutput>
 					<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
