--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
 # General properties
 
-JDBC.connectionURL = jdbc:sqlite:swsecdemo.sqlite
+JDBC.connectionURL = jdbc:sqlite:src/main/webapp/WEB-INF/swsecdemo.sqlite
