--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>injcristianrojas</groupId>
-  <artifactId>swsec-demo</artifactId>
+  <artifactId>swsec-intro</artifactId>
   <version>1.0</version>
   <packaging>war</packaging>
   <name>Java SWSEC Intro App</name>
