--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,8 @@
   <name>Java SWSEC Intro App</name>
 
   <properties>
-    <jettyVersion>7.2.0.v20101020</jettyVersion>
+    <jettyVersion>8.1.11.v20130520</jettyVersion>
   </properties>
-
-  <repositories>
-    <repository>
-      <id>tmate</id>
-      <url>http://maven.tmatesoft.com/content/repositories/releases</url>
-    </repository>
-  </repositories>
 
   <dependencies>
     <dependency>
@@ -28,17 +21,27 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.6.16</version>
+      <version>3.7.2</version>
     </dependency>
     <dependency>
       <groupId>org.tmatesoft.sqljet</groupId>
       <artifactId>sqljet</artifactId>
-      <version>1.1.7</version>
+      <version>1.1.6</version>
     </dependency>
     <dependency>
       <groupId>org.owasp.esapi</groupId>
       <artifactId>esapi</artifactId>
       <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -57,11 +60,6 @@
       <artifactId>logback-classic</artifactId>
       <version>1.0.6</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
     </dependency>
   </dependencies>
 
