--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,8 @@
         <version>1.2.1</version>
         <executions>
           <execution>
+            <id>db-setup-exec-java</id>
+            <phase>pre-integration-test</phase>
             <goals>
               <goal>java</goal>
             </goals>
