--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,11 @@ dependencies {
     compile 'org.eclipse.jetty:jetty-server:8.1.11.v20130520'
     compile 'commons-io:commons-io:2.4'
     compile 'commons-fileupload:commons-fileupload:1.3'
-    compile 'org.owasp.esapi:esapi:2.0.1'
+    compile 'com.coverity.security:coverity-escapers:1.1.1'
     compile 'org.tmatesoft.sqljet:sqljet:1.1.6'
     compile 'org.xerial:sqlite-jdbc:3.7.2'
     testCompile 'junit:junit:4.4'
-    testCompile 'net.sourceforge.jwebunit:jwebunit-htmlunit-plugin:2.5'
+    testCompile 'net.sourceforge.jwebunit:jwebunit-htmlunit-plugin:3.1'
 }
 
 [jettyRun,jettyRunWar,jettyStop]*.stopPort = 8081
