--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 
   <build>
     <plugins>
+      
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
@@ -90,6 +91,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -114,6 +116,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -130,7 +133,7 @@
         <version>1.2.1</version>
         <executions>
           <execution>
-            <id>db-setup-exec-java</id>
+            <id>db-setup</id>
             <phase>pre-integration-test</phase>
             <goals>
               <goal>java</goal>
@@ -141,6 +144,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
