--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,29 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+            <execution>
+            <id>db-cleanup</id>
+            <phase>clean</phase>
+            <goals>
+                <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <echo message="deleting database file" />
+                <delete>
+                  <fileset dir="src/main/webapp/WEB-INF/" includes="**/*.sqlite" />
+                </delete>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
 
