--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Java SWSEC Intro App</name>
 
   <properties>
-    <jettyVersion>9.1.3.v20140225</jettyVersion>
+    <jetty.version>9.2.1.v20140609</jetty.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
-      <version>${jettyVersion}</version>
+      <version>${jetty.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xerial</groupId>
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>net.sourceforge.jwebunit</groupId>
       <artifactId>jwebunit-htmlunit-plugin</artifactId>
-      <version>3.1</version>
+      <version>3.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -64,7 +64,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jettyVersion}</version>
+        <version>${jetty.version}</version>
         <configuration>
           <scanIntervalSeconds>10</scanIntervalSeconds>
           <stopKey>stopKey</stopKey>
