--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     version="3.0"> 
+	
 	<display-name>tallerDefensa</display-name>
+	
 	<servlet>
 		<description>
 		</description>
@@ -46,6 +48,14 @@
 		<servlet-name>Exit</servlet-name>
 		<servlet-class>swsec.Exit</servlet-class>
 	</servlet>
+	<servlet>
+		<description>
+		</description>
+		<display-name>Account</display-name>
+		<servlet-name>Account</servlet-name>
+		<servlet-class>swsec.Account</servlet-class>
+	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>Saludos</servlet-name>
 		<url-pattern>/Saludos</url-pattern>
@@ -70,6 +80,11 @@
 		<servlet-name>Exit</servlet-name>
 		<url-pattern>/Exit</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>Account</servlet-name>
+		<url-pattern>/Account</url-pattern>
+	</servlet-mapping>
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
