--- a/pom.xml
+++ b/pom.xml
@@ -150,11 +150,26 @@
 
   <reporting>
     <plugins>
+
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>3.0.0</version>
       </plugin>
+
+      <plugin>
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>1.2.10</version>
+          <reportSets>
+              <reportSet>
+                  <reports>
+                      <report>aggregate</report>
+                  </reports>
+              </reportSet>
+          </reportSets>
+      </plugin>
+
     </plugins>
   </reporting>
 
