--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,20 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>3.0.1</version>
+        <configuration>
+            <effort>Max</effort>
+            <threshold>Low</threshold>
+            <failOnError>true</failOnError>
+            <includeFilterFile>${session.executionRootDirectory}/findbugs-security-include.xml</includeFilterFile>
+            <excludeFilterFile>${session.executionRootDirectory}/findbugs-security-exclude.xml</excludeFilterFile>
+            <plugins>
+              <plugin>
+                <groupId>com.h3xstream.findsecbugs</groupId>
+                <artifactId>findsecbugs-plugin</artifactId>
+                <version>1.4.1</version>
+              </plugin>
+            </plugins>
+        </configuration>
       </plugin>
 
       <plugin>
