--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,7 @@
       <plugin>
           <groupId>org.owasp</groupId>
           <artifactId>dependency-check-maven</artifactId>
+          <version>1.3.6</version>
           <reportSets>
             <reportSet>
               <reports>
