--- a/pom.xml
+++ b/pom.xml
@@ -172,6 +172,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
+        <version>3.0.4</version>
         <configuration>
           <effort>Max</effort>
           <threshold>Low</threshold>
@@ -199,6 +200,15 @@
               </reports>
             </reportSet>
           </reportSets>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+        </configuration>
       </plugin>
 
     </plugins>
