--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,28 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-jspc-maven-plugin</artifactId>
+        <version>9.3.11.v20160721</version>
+        <executions>
+          <execution>
+            <id>jspc</id>
+            <goals>
+              <goal>jspc</goal>
+            </goals>
+            <configuration>
+              <jspc>
+                <smapSuppressed>false</smapSuppressed>
+                <smapDumped>true</smapDumped>
+              </jspc>
+              <keepSources>true</keepSources>
+              <useProvidedScope>true</useProvidedScope>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
 
