--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Fans de las Aves Chilenas</name>
 
   <properties>
-    <jetty.version>9.4.0.M1</jetty.version>
+    <jetty.version>9.3.12.v20160915</jetty.version>
     <owasp.depcheck.version>1.4.3</owasp.depcheck.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dependency.check.report.dir>${project.build.directory}/dependency-check</dependency.check.report.dir>
