--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Fans de las Aves Chilenas</name>
 
   <properties>
-    <jetty.version>9.3.12.v20160915</jetty.version>
+    <jetty.version>9.3.13.M0</jetty.version>
     <owasp.depcheck.version>1.4.3</owasp.depcheck.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dependency.check.report.dir>${project.build.directory}/dependency-check</dependency.check.report.dir>
@@ -99,7 +99,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.16</version>
+        <version>2.19.1</version>
         <configuration>
           <includes>
             <include>**/*TTest.java</include>
@@ -124,7 +124,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.5.1</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -152,7 +152,7 @@
 
       <plugin>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.6.1</version>
+        <version>3.0.0</version>
         <configuration>
           <filesets>
             <fileset>
@@ -169,7 +169,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-jspc-maven-plugin</artifactId>
-        <version>9.3.11.v20160721</version>
+        <version>${jetty.version}</version>
         <executions>
           <execution>
             <id>jspc</id>
@@ -191,7 +191,7 @@
       <plugin>
         <groupId>org.sonarsource.scanner.maven</groupId>
         <artifactId>sonar-maven-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.2</version>
       </plugin>
 
       <plugin>
