--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <owasp.depcheck.version>1.4.5</owasp.depcheck.version>
     <zap.plugin.version>0.1.0</zap.plugin.version>
     <findbugs.plugin.version>3.0.4</findbugs.plugin.version>
+    <findsecbugs.plugin.version>1.6.0</findsecbugs.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <dependency.check.report.dir>${project.build.directory}/dependency-check</dependency.check.report.dir>
     <sonar.dependencyCheck.reportPath>${dependency.check.report.dir}/dependency-check-report.xml</sonar.dependencyCheck.reportPath>
@@ -259,7 +260,7 @@
             <plugin>
               <groupId>com.h3xstream.findsecbugs</groupId>
               <artifactId>findsecbugs-plugin</artifactId>
-              <version>1.6.0</version>
+              <version>${findsecbugs.plugin.version}</version>
             </plugin>
           </plugins>
         </configuration>
