--- a/sonarqube/docker-compose.yml
+++ b/sonarqube/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   sonarqube:
-    image: sonarqube:latest
+    image: sonarqube:7.0
+    build: .
     ports:
       - '9000:9000'
       - '9092:9092'
