--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     version="3.0"> 
 	
-	<display-name>tallerDefensa</display-name>
+	<display-name>AvesChilenas</display-name>
 	
 	<servlet>
 		<description>
@@ -84,6 +84,10 @@
 		<servlet-name>Account</servlet-name>
 		<url-pattern>/Account</url-pattern>
 	</servlet-mapping>
+
+	<listener>
+        <listener-class>swsec.SWSECContextListener</listener-class>
+    </listener>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
