Working version (liposuction included)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-victim:
-  build: .
-  #image: injcristianrojas/swsec-intro
-  privileged: true
-  ports:
-    - "8080:8080"
-  volumes:
-    - .:/usr/src/app:rw
-  working_dir: /usr/src/app
+version: '3'
+
+services:
+  victim:
+    build: .
+    ports:
+      - "8080:8080"
+    volumes:
+      - .:/app:rw
