--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,6 @@ services:
       - "8080:8080"
     volumes:
       - .:/app:rw
+  owasp-zap:
+    image: owasp/zap2docker-stable
+    command: zap-baseline.py -t http://victim:8080
