Ready for AWS Fargate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
       - "8080:8080"
     volumes:
       - .:/app:rw
-  owasp-zap:
-    image: owasp/zap2docker-stable
-    command: zap-baseline.py -t http://victim:8080
+
+  # owasp-zap:
+  #   image: owasp/zap2docker-stable
+  #   command: zap-baseline.py -t http://victim:8080
+  #
+  # code-analysis:
+  #   build: .
+  #   command: dependency-check:aggregate
+  #   volumes:
+  #     - .:/app:rw
